--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </section>
 
-      <section class="about-music">
+      <section class="about-music container">
         <h3>The movie and TV collection you always wished for. Granted.</h3>
         <p>
           With over 100,000 movies and TV shows to choose from, there’s always
